<resources>
    <string name="app_name">TestApplication</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="subsciption">Subscription Details</string>
    <string name="data_balance">Data Balance</string>
    <string name="exp_date">Expiry Date</string>
    <string name="auto_ren">Auto Renewal</string>
    <string name="products">Product details</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="rs">\u20B9</string>
</resources>
