<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="custDetails"
            type="com.mivi.testapplication.VO.CustomerDetails"/>
    </data>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerDetailsActivity">
    <TextView android:id="@+id/subscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subsciption"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        />
    <LinearLayout
        android:id="@+id/ll_balance"
        app:layout_constraintTop_toBottomOf="@id/subscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/data_balance"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/labelColor"
        />
        <TextView
            android:id="@+id/balnce"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="5dp"
            android:text="@{String.valueOf(custDetails.balanceData)}"
            android:layout_marginTop="10dp"
            android:textColor="@color/textColor"
            />
    </LinearLayout>
    <LinearLayout android:id="@+id/ll_date"
        app:layout_constraintTop_toBottomOf="@id/ll_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/exp_date"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/labelColor"
            />
        <TextView
            android:id="@+id/expDate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="5dp"
            android:text="@{String.valueOf(custDetails.expDate)}"
            android:layout_marginTop="10dp"
            android:textColor="@color/textColor"
            />
    </LinearLayout>
    <CheckBox android:id="@+id/checkbox"
        app:layout_constraintTop_toBottomOf="@id/ll_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="@{custDetails.autoRenewal}"
        android:clickable="false"
        android:text="@string/auto_ren"/>
    <TextView
        android:id="@+id/products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/products"
        app:layout_constraintTop_toBottomOf="@id/checkbox"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        />
    <LinearLayout
        android:id="@+id/ll_name"
        app:layout_constraintTop_toBottomOf="@id/products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/labelColor"
            />
        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="5dp"
            android:text="@{String.valueOf(custDetails.name)}"
            android:layout_marginTop="10dp"
            android:textColor="@color/textColor"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_price"
        app:layout_constraintTop_toBottomOf="@id/ll_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/price"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/labelColor"
            />
        <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@{@string/rs+' '+String.valueOf(custDetails.price)}"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/textColor"
            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
</layout>